--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "server": "nodemon app.js",
-    "client": "cd client; yarn start",
+    "client": "cd client && yarn start",
     "dev": "concurrently \"yarn server\" \"yarn client\""
   },
   "keywords": [],
@@ -18,6 +18,7 @@
     "mongoose": "^5.9.7"
   },
   "devDependencies": {
+    "concurrently": "^5.1.0",
     "nodemon": "^2.0.2"
   }
 }
