--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "config": "^3.3.1",
+    "connect-mongodb-session": "^2.3.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
     "mongoose": "^5.9.7"
   },
   "devDependencies": {
