--- a/client/package.json
+++ b/client/package.json
@@ -7,8 +7,8 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "classnames": "^2.2.6",
-    "materialize-css": "^1.0.0-rc.2",
     "nanoid": "^3.0.2",
+    "normalize.css": "^8.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router": "^5.1.2",
