--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "golos",
   "version": "0.1.0",
   "private": true,
+  "author": "Sergey Startsev <sergey@webstartsev.ru>",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
