--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "author": "Sergey Startsev <sergey@webstartsev.ru>",
   "license": "ISC",
   "dependencies": {
+    "compression": "^1.7.4",
     "config": "^3.3.1",
     "connect-mongodb-session": "^2.3.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "helmet": "^3.22.0",
     "mongoose": "^5.9.7",
     "ws": "^7.2.3"
   },
