--- a/package.json
+++ b/package.json
@@ -3,11 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
+  "engines": {
+    "node": "13.8.0",
+    "npm": "6.13.7"
+  },
   "scripts": {
     "start": "node app.js",
     "server": "nodemon app.js",
     "client": "cd client && yarn start",
-    "dev": "concurrently \"yarn server\" \"yarn client\""
+    "client-install": "npm install --prefix client",
+    "dev": "concurrently \"yarn server\" \"yarn client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run client-install && npm run build --prefix client"
   },
   "keywords": [],
   "author": "Sergey Startsev <sergey@webstartsev.ru>",
