--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "client": "cd client && yarn start",
     "client-install": "npm install --prefix client",
     "dev": "concurrently \"yarn server\" \"yarn client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run client-install && npm build --prefix client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run client-install && npm run build --prefix client"
   },
   "keywords": [],
   "author": "Sergey Startsev <sergey@webstartsev.ru>",
