--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "app.js",
   "engines": {
-    "node": "14.21.3",
-    "npm": "6.13.7"
+    "node": "20.9.0",
+    "npm": "10.1.0"
   },
   "scripts": {
     "start": "node app.js",
@@ -13,7 +13,7 @@
     "client": "cd client && npm run start",
     "client-install": "npm install --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run client-install && npm run build --prefix client"
+    "build": "npm run client-install && npm run build --prefix client"
   },
   "keywords": [],
   "author": "Sergey Startsev <sergey@webstartsev.ru>",
